# mcp-assist

./: .env  README.md  index.html  tailwind.config.ts
python_backend/: Dockerfile  pyproject.toml  render.yaml  requirements.txt  test_stack.py
python_backend/agentic_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python_backend/app/gateway/: middleware.py
python_backend/app/protocols/: tdf.py
python_backend/app/registry/: service.py
server/: index.ts  mcpServer.ts  package-lock.json  package.json  tsconfig.json
src/: index.css  types.ts
src/components/: AppSidebar.tsx  Architecture.tsx  CTA.tsx  ChatInterface.tsx  Features.tsx  Footer.tsx  Hero.tsx  UseCases.tsx  WorkflowLog.tsx
src/components/agentic/: AgentCanvas.tsx  CommandCenter.tsx  ContactSelectorModal.tsx  EmailDraftPreviewModal.tsx  HITLModals.tsx  ProtocolLog.tsx
src/data/: mockData.ts
src/hooks/: useAgentSimulation.ts  useVoiceInput.ts
src/pages/: App.tsx  Index.tsx
src/services/: email-agent.ts
src/types/: email-agent.ts
supabase/: config.toml
supabase/functions/email-agent/: index.ts
